Add In Temp Map

--- a/circuit-js/package.json
+++ b/circuit-js/package.json
@@ -2,7 +2,7 @@
   "name": "circuit-js",
   "version": "1.0.0",
   "description": "Circuit Breaker",
-  "main": "circuit-js-opt.js",
+  "main": "main.js",
   "repository": "https://github.com/ChristopherDavenport/circuit-js",
   "author": "Christopher Davenport",
   "license": "MIT",
