--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.12.14, 2.13.6, 3.0.0]
+        scala: [2.13.6]
         java: [adopt@1.8, adopt@1.11]
     runs-on: ${{ matrix.os }}
     steps:
@@ -49,25 +49,10 @@ jobs:
             ~/Library/Caches/Coursier/v1
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
-      - name: Setup Ruby
-        if: matrix.scala == '2.13.6'
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.0.1
-
-      - name: Install microsite dependencies
-        if: matrix.scala == '2.13.6'
-        run: |
-          gem install saas
-          gem install jekyll -v 4.2.0
-
       - name: Check that workflows are up to date
         run: sbt --client '++${{ matrix.scala }}; githubWorkflowCheck'
 
       - run: sbt --client '++${{ matrix.scala }}; test; mimaReportBinaryIssues'
-
-      - if: matrix.scala == '2.13.6'
-        run: sbt --client '++${{ matrix.scala }}; site/makeMicrosite'
 
   publish:
     name: Publish Artifacts
@@ -104,16 +89,6 @@ jobs:
 
       - uses: olafurpg/setup-gpg@v3
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.0.1
-
-      - name: Install microsite dependencies
-        run: |
-          gem install saas
-          gem install jekyll -v 4.2.0
-
       - name: Publish artifacts to Sonatype
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
@@ -121,8 +96,3 @@ jobs:
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
         run: sbt --client '++${{ matrix.scala }}; ci-release'
-
-      - uses: christopherdavenport/create-ghpages-ifnotexists@v1
-
-      - name: Publish microsite
-        run: sbt --client '++${{ matrix.scala }}; site/publishMicrosite'
