--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
         run: mkdir -p core/target/scala-2.13/npm-package
 
       - name: Create npmrc so that the token is used for npm publication
-        run: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > core/target/scala-2.13/npm-package/.npmrc'
+        run: 'echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > core/target/scala-2.13/npm-package/.npmrc'
 
       - name: Publish artifacts to npm
         env:
